--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,74 @@
-@media only screen and (max-width: 768px){
+
+/* Custom, iPhone Retina */ 
+    @media only screen and (min-width : 320px) {
+        
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (min-width : 480px) {
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (min-width : 768px) {
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (min-width : 992px) {
+
+    }
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (min-width : 1200px) {
+
+    }
+
+
+    /* Large Devices, Wide Screens */
+    @media only screen and (max-width : 1200px) {
+
+    }
+
+    /* Medium Devices, Desktops */
+    @media only screen and (max-width : 992px) {
+
+    }
+
+    /* Small Devices, Tablets */
+    @media only screen and (max-width : 768px) {
+
+    }
+
+    /* Extra Small Devices, Phones */ 
+    @media only screen and (max-width : 480px) {
+
+    }
+
+    /* Custom, iPhone Retina */ 
+    @media only screen and (max-width : 320px) {
+        
+    }
+	
+	@media only screen and (max-width : 1200px) {
+
 }
 
+@media only screen and (max-width : 979px) {
+
+}
+
+@media only screen and (max-width : 767px) {
+
+}
+
+@media only screen and (max-width : 480px) {
+
+}
+
+@media only screen and (max-width : 320px) {
+
+}
 
 .navbar {
       font-family: Montserrat, sans-serif;
@@ -30,7 +98,8 @@
 body {
     font-family: Arial;
 	font-size:16px;
-	background-image:url(../images/background_1.jpg)
+	background-image:url(../images/background_1.jpg);
+	font-weight:bold;
 	
 }
 
@@ -47,6 +116,11 @@ body {
 
 img {
     margin:5px;
+}
+
+.btn btn-primary btn-md{
+	background: #0099cc;
+    color: #ffffff;
 }
 
 .isotope-item {
@@ -74,3 +148,11 @@ img {
     -moz-transition-property: -moz-transform, opacity;
     transition-property: transform, opacity;
 }
+
+  #googleMap {
+    width: 100%; 
+    height: 400px; 
+    -webkit-filter: grayscale(100%);
+    filter: grayscale(100%); 
+}
+
