--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
       color:#AEBBBA !important;
   }
   .navbar-nav li a:hover {
-      color: #fff !important;
+      color: white !important;
   }
   .navbar-nav li.active a {
       color: #fff !important;
