--- a/css/style.css
+++ b/css/style.css
@@ -1,27 +1,44 @@
 
 /* Custom, iPhone Retina */ 
     @media only screen and (min-width : 320px) {
-        
+		.page-header,.pageHeader{
+		position: relative;
+	    
     }
 
     /* Extra Small Devices, Phones */ 
     @media only screen and (min-width : 480px) {
+		.page-header,.pageHeader{
+		position: relative;
+	    
+   		 }
+			.navbar{
+			width:auto;
 
+    	}
     }
 
     /* Small Devices, Tablets */
     @media only screen and (min-width : 768px) {
+		.navbar{
+			width:auto;
 
+    	}
     }
 
     /* Medium Devices, Desktops */
     @media only screen and (min-width : 992px) {
+		.navbar{
+			width:auto;
 
     }
 
     /* Large Devices, Wide Screens */
     @media only screen and (min-width : 1200px) {
+		.navbar{
+			width:auto;
 
+   		 }
     }
 
 
